syntax = "proto3";

package education_portal;

service EducationPortalService {
  rpc uploadQuiz(stream QuizQuestion) returns (UploadConfirmation){}

}

message QuizQuestion{
  string quizQuestion = 1;
}

message UploadConfirmation{
  uint32 numOfQuestions = 1;
  uint32 quizRefNumber = 2;
}
